🐛 fix: material tab body overflow.

--- a/front-end/src/sass/_material.scss
+++ b/front-end/src/sass/_material.scss
@@ -327,3 +327,8 @@ mat-expansion-panel-header {
     @include flex-center;
   }
 }
+
+.mat-tab-body.mat-tab-body-active,
+.mat-tab-body-content {
+  overflow-y: hidden !important;
+}
